--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -798,6 +798,6 @@ body.dark-mode .svcNum {
 }
 
 body.dark-mode .arrival-now {
-    color: #ff0000;
+    color: #9fa102;
     font-weight: bold;
 }
