2025-12 Cumulative Update for Version 2512 (6.1.0)

--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -1210,6 +1210,11 @@
 
     }
 
+    #cv-bat {
+        height: 25vh !important;
+
+    }
+
     .single_gallery_item {
         left: 0px !important;
     }
@@ -1243,6 +1248,24 @@
 
     table th {
         font-size: 15px;
+    }
+
+    .table {
+        border-radius: 15px;
+    }
+
+    .table th,
+    .table td {
+        padding: 8px;
+        padding-left: 9px;
+    }
+
+    .table tr:last-child td:first-child {
+        border-bottom-left-radius: 15px;
+    }
+
+    .table tr:last-child td:last-child {
+        border-bottom-right-radius: 15px;
     }
 
 }
