Intro new All Bus Stops API

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -798,7 +798,7 @@ body.dark-mode .svcNum {
 }
 
 body.dark-mode .arrival-now {
-    color: #9fa102;
+    color: #94d40b;
     font-weight: bold;
 }
 
