--- a/css/style.css
+++ b/css/style.css
@@ -3677,7 +3677,7 @@ table th {
 }
 
 .arrival-now {
-    color: #94d40b;
+    color: #7bb108;
     font-weight: bold;
 }
 
@@ -3744,4 +3744,26 @@ table th {
 
 .bus-stop-code:hover {
     color: #52718d !important;
+}
+
+.list-group-item:first-child {
+    transition-duration: 800ms;
+    border-radius: 20px;
+    margin-top: 1em;
+    font-size: 20px;
+}
+
+.list-group-item {
+    transition-duration: 800ms;
+    border-radius: 20px;
+    margin-top: 1em;
+    font-size: 20px;
+    border: 1px solid #2b2b2b33;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.list-group-item:hover {
+    background-color: #d8e6f3;
+    transform: translateY(-2px);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
 }
