--- a/css/style.css
+++ b/css/style.css
@@ -3725,7 +3725,7 @@ table th {
     border-radius: 25px;
     position: relative;
     z-index: 1;
-    margin-top: 50px;
+    margin-top: 1em;
     border: 1px solid #2b2b2b33;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
@@ -3746,7 +3746,7 @@ table th {
     color: #52718d !important;
 }
 
-.list-group-item:first-child {
+.list-group-item:first-child, .list-group-item:last-child {
     transition-duration: 800ms;
     border-radius: 20px;
     margin-top: 1em;
