--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -825,3 +825,23 @@ body.dark-mode .bus-stop-code {
 body.dark-mode .bus-stop-code:hover {
     color: #a4c5e2 !important;
 }
+
+body.dark-mode .list-group-item:first-child, .list-group-item:last-child {
+    transition-duration: 800ms;
+    border-radius: 20px;
+    margin-top: 1em;
+    font-size: 20px;
+}
+
+body.dark-mode .list-group-item {
+    background-color: #494949;
+    color: #fff !important;
+    border: 1px solid #2b2b2b33;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+body.dark-mode .list-group-item:hover {
+    background-color: #334250;
+    transform: translateY(-2px);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+}
