--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -786,7 +786,7 @@ body.dark-mode table th {
 }
 
 body.dark-mode table td {
-    background-color: #202020;
+    background-color: #2e2e2e;
     color: #fff;
     border-color: #000;
 }
@@ -804,10 +804,9 @@ body.dark-mode .arrival-now {
 
 body.dark-mode .bus-stop {
     background-color: #2e2e2e;
-    color: #fff;
-    transition: all 0.5s ease;
+    color: #fff !important;
     border: 1px solid #2b2b2b33;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 body.dark-mode .bus-stop:hover {
@@ -834,10 +833,12 @@ body.dark-mode .list-group-item:first-child, .list-group-item:last-child {
 }
 
 body.dark-mode .list-group-item {
-    background-color: #494949;
+    background-color: #2e2e2e;
     color: #fff !important;
     border: 1px solid #2b2b2b33;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+    padding-top: 1em;
+    padding-bottom: 1em;
 }
 
 body.dark-mode .list-group-item:hover {
