--- a/css/style.css
+++ b/css/style.css
@@ -3773,6 +3773,8 @@ table th {
     font-size: 20px;
     border: 1px solid #2b2b2b33;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+    padding-top: 1em;
+    padding-bottom: 1em;
 }
 
 .list-group-item:hover {
