--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -786,7 +786,7 @@ body.dark-mode table th {
 }
 
 body.dark-mode table td {
-    background-color: #2e2e2e;
+    background-color: #1f1e1e;
     color: #fff;
     border-color: #000;
 }
@@ -803,7 +803,7 @@ body.dark-mode .arrival-now {
 }
 
 body.dark-mode .bus-stop {
-    background-color: #2e2e2e;
+    background-color: #222222;
     color: #fff !important;
     border: 1px solid #2b2b2b33;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
