--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -1211,8 +1211,8 @@
     }
 
     #cv-bat {
-        height: 25vh !important;
-
+        /* height: 25vh !important; */
+        height: 10vh !important;
     }
 
     .single_gallery_item {
