--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -867,3 +867,10 @@ body.dark-mode .card-bz:hover {
     transform: translateY(-2px);
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
 }
+
+body.dark-mode .btn-toPin {
+    background-color: #494949;
+    border: 1px solid #2b2b2b33;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
+    color: #fff;
+}
