--- a/css/style.css
+++ b/css/style.css
@@ -3924,7 +3924,11 @@ table th {
 
 .all-apps h2 {
     font-size: 30px;
+    margin-left: 1em;
+    margin-top: 2em;
     margin-bottom: 1em;
+    font-weight: bolder;
+    color: #3b3b3b;
 }
 
 .pinned h2 {
@@ -3936,6 +3940,7 @@ table th {
     gap: 1em;
     flex-wrap: wrap;
     margin-bottom: 4em;
+    padding: 0 1em;
 }
 
 .pinned p {
@@ -3951,6 +3956,10 @@ table th {
     font-weight: bold;
     text-align: center !important;
     line-height: 1.5;
+}
+
+.card-icon {
+    border-radius: 25px;
 }
 
 .bz-btn {
@@ -3975,24 +3984,7 @@ table th {
     margin-right: 3em;
 }
 
-
-.bz-btn.btn-2 {
-    color: #fff;
-}
-
-.bz-btn:focus,
-.bz-btn:hover {
-    font-weight: 500;
-    background-color: #6d99c0 !important;
-    color: #fff;
-    transform: translateY(-2px);
-}
-
-.card-icon {
-    border-radius: 25px;
-}
-
-.btn-bin {
+.btn-unpin {
     position: relative;
     z-index: 1;
     min-width: 50px;
@@ -4013,12 +4005,41 @@ table th {
     margin-left: 1em;
 }
 
-.btn-bin.btn-2 {
+.btn-toPin {
+    position: relative;
+    z-index: 1;
+    min-width: 50px;
+    height: 46px;
+    line-height: 46px;
+    font-size: 14px;
+    font-weight: 500;
+    display: inline-block;
+    padding: 0 30px;
+    text-align: center;
+    text-transform: capitalize;
+    color: #000;
+    border-radius: 60px;
+    transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    border: none;
+    margin-left: 1em;
+    border: 1px solid #cccccc;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff4d;
+}
+
+
+.bz-btn.btn-2,
+.btn-unpin.btn-2,
+.btn-toPin.btn-2 {
     color: #fff;
 }
 
-.btn-bin:focus,
-.btn-bin:hover {
+.bz-btn:focus,
+.bz-btn:hover,
+.btn-unpin:focus,
+.btn-unpin:hover,
+.btn-toPin:focus,
+.btn-toPin:hover {
     font-weight: 500;
     background-color: #6d99c0 !important;
     color: #fff;
