--- a/css/style.css
+++ b/css/style.css
@@ -3913,10 +3913,6 @@ table th {
     color: #666;
 }
 
-.main-content {
-    padding: 2em;
-}
-
 .all-apps,
 .pinned {
     margin-bottom: 2em;
@@ -3944,7 +3940,7 @@ table th {
 }
 
 .pinned p {
-    text-align: right;
+    text-align: center;
     color: #0078d4;
     cursor: pointer;
 }
