2025-12 Cumulative Update for Version 2512 (6.1.0)

--- a/css/style.css
+++ b/css/style.css
@@ -4041,3 +4041,10 @@ table th {
     color: #fff;
     transform: translateY(-2px);
 }
+
+/*  */
+.list-group-item.active {
+    z-index: 2;
+    color: #000;
+    background-color: #c7e3fb;
+}
