--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -874,3 +874,10 @@ body.dark-mode .btn-toPin {
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
     color: #fff;
 }
+
+/*  */
+body.dark-mode .list-group-item.active {
+    z-index: 2;
+    color: #000;
+    background-color: #52718d;
+}
