2025-12 Cumulative Update for Version 2512 (6.1.0)

--- a/css/style.css
+++ b/css/style.css
@@ -4079,3 +4079,9 @@ table th {
     color: #000;
     cursor: pointer;
 }
+
+.fetch {
+    margin-top: 1em;
+    color: #4d4d4d;
+    text-align: left !important;
+}
