2025-12 Cumulative Update for Version 2512 (6.1.0)

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -906,3 +906,9 @@ body.dark-mode .pinned p {
     color: #fff;
     cursor: pointer;
 }
+
+body.dark-mode .alert-warning {
+    background-color: #332701;
+    color: #ffda6a;
+    border-color:  #997404;
+}
