--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -770,7 +770,7 @@ body.dark-mode .flickity-prev-next-button .arrow {
     fill: #fff !important;
 }
 
-/* ------------------------------------------*/
+/* ----------------Table ART----------------------*/
 
 body.dark-mode .table {
     border: 1px solid #000;
@@ -906,5 +906,21 @@ body.dark-mode .pinned p {
 body.dark-mode .alert-warning {
     background-color: #332701;
     color: #ffda6a;
-    border-color:  #997404;
+    border-color: #997404;
+}
+
+/* -----------Card ART-------------------------- */
+body.dark-mode .card {
+    background-color: #2e2e2e;
+    border: 1px solid #2b2b2b33;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+body.dark-mode .card .card-header {
+    background-color: #0000002c;
+}
+
+body.dark-mode .service-no {
+    background-color: #94d40b;
+    color: #000;
 }
