--- a/css/style.css
+++ b/css/style.css
@@ -3604,7 +3604,7 @@ img.mfp-img {
     display: none !important;
 }
 
-/* ------------------------------------------*/
+/* ----------------Table ART--------------------------*/
 .table {
     border-collapse: separate;
     border-spacing: 0;
@@ -3650,7 +3650,7 @@ table th {
 
 .svcNum {
     background-color: #94d40b;
-    border-radius: 5px;
+    border-radius: 25px;
     color: #000;
     font-weight: bold;
 }
@@ -4136,3 +4136,6 @@ table th {
     color: #6c757d;
     font-size: 17px;
 }
+
+/* ---------------Card ART---------------------------*/
+
