--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -458,7 +458,7 @@ body.dark-mode #sort-options {
     background-size: 10px;
     padding-right: 30px;
     padding-left: 15px;
-    background-color: #494949;
+    background-color: #2e2e2e;
     border: 1px solid #000;
     color: #fff;
 }
@@ -550,12 +550,12 @@ body.dark-mode .form-control {
     width: 100%;
     color: #fff;
     appearance: none;
-    background: #494949;
+    background: #2e2e2e;
     background-clip: padding-box;
     border-radius: 25px;
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
     border: 1px solid #2b2b2b33;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 body.dark-mode .form-control::placeholder {
@@ -799,7 +799,7 @@ body.dark-mode .arrival-now {
 }
 
 body.dark-mode .bus-stop {
-    background-color: #222222;
+    background-color: #2e2e2e;
     color: #fff !important;
     border: 1px solid #2b2b2b33;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -883,7 +883,7 @@ body.dark-mode .lg-date {
 }
 
 body.dark-mode .pin-msg {
-    background-color: #222222;
+    background-color: #2e2e2e;
     color: #fff !important;
     border: 1px solid #2b2b2b33;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
