2025-01 Cumulative Update for Version 2501 (6.1.x)

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -922,6 +922,6 @@ body.dark-mode .card .card-header {
 }
 
 body.dark-mode .service-no {
-    background-color: #94d40b;
+    background-color: #7db603;
     color: #000;
 }
