2025-01 Cumulative Update for Version 2501 (6.1.x)

--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -682,8 +682,8 @@
     }
 
     .bus-stop-description,
-    body.dark-mode .bus-stop-description {
-        font-size: 25px !important;
+    body.dark-mode .bus-stop-description-title {
+        font-size: 25px;
     }
 }
 
