2025-01 Cumulative Update for Version 2501 (6.1.x)

--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -80,6 +80,7 @@
     .single_gallery_item {
         flex: 1 1 calc(33.33% - 20px);
         max-width: calc(33.33% - 20px);
+        padding: 1em;
     }
 
     .portfolio-sort {
