--- a/css/style.css
+++ b/css/style.css
@@ -4033,6 +4033,24 @@ table th {
     background-color: #ffffff4d;
 }
 
+.btn-busloc {
+    background-color: #de652e;
+    color: #fff;
+    transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    border: 1px solid #cccccc;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
+
+.btn-busloc:disabled {
+    background-color: #3d3d3d;
+    color: #535353;
+    transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    border: 1px solid #cccccc;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
+
 
 .bz-btn.btn-2,
 .btn-unpin.btn-2,
@@ -4045,7 +4063,9 @@ table th {
 .btn-unpin:focus,
 .btn-unpin:hover,
 .btn-toPin:focus,
-.btn-toPin:hover {
+.btn-toPin:hover,
+.btn-busloc:focus,
+.btn-busloc:hover {
     font-weight: 500;
     background-color: #6d99c0 !important;
     color: #fff;
@@ -4139,4 +4159,3 @@ table th {
 }
 
 /* ---------------Card ART---------------------------*/
-
