--- a/css/style.css
+++ b/css/style.css
@@ -3725,11 +3725,16 @@ table th {
     display: flex;
     align-items: center;
     gap: 8px;
+        background-color: #2e2e2e;
+        border: 1px solid #2b2b2b33;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+    padding: 0.5em;
+    border-radius: 15px;
 }
 
 .fleet-icon {
     width: 50px;
-    height: 20px;
+    height: auto;
     object-fit: contain;
 }
 
