--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -926,3 +926,12 @@ body.dark-mode .fleet-legend span {
     padding: 0.5em;
     border-radius: 15px;
 }
+
+body.dark-mode .btn-busloc:disabled {
+    background-color: #3d3d3d;
+    color: #535353;
+    transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    border: 1px solid #2b2b2b;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
