--- a/css/style.css
+++ b/css/style.css
@@ -4048,7 +4048,7 @@ table th {
 }
 
 .btn-busloc:disabled {
-    background-color: #3d3d3d;
+    background-color: #cecece;
     color: #535353;
     transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     border: 1px solid #cccccc;
