2025-01 Cumulative Update for Version 2501 (6.1.10)

--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,7 @@
     - 8.0 Animations
     - 9.0 About
     - 10.0 Timelines/Summary
-    - 11.0 Blog
-    - 12.0 Works By NRFZ
+    - 12.0 Works By NRFZ/Blogs (Featured/Main)
     - 13.0 Hero Details
     - 14.0 Skills Section
     - 15.0 Works By NRFZ_Details Section
@@ -1228,7 +1227,7 @@ h4.timeline-date-aa {
 
 /* ------------------------------------------ */
 
-/* ------------------------------------------ 11.0 Works By NRFZ (Featured/Main) ------------------------------------------ */
+/* ------------------------------------------ 11.0 Works By NRFZ/Blogs (Featured/Main) ------------------------------------------ */
 .wbnrfz-works {
     padding: 60px 20px;
     background-color: #ececea;
