--- a/css/style.css
+++ b/css/style.css
@@ -1424,8 +1424,9 @@ img.profile-pic {
 
 .skill-ara .single-skill .progress {
     height: 12px;
-    border-radius: 0;
     background-color: #dddddd;
+    border: 1px solid #2b2b2b09;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
 }
 
