--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -672,7 +672,7 @@
 
     .bus-stop-code-text,
     body.dark-mode .bus-stop-code-text {
-        font-size: 22px !important;
+        font-size: 22px;
         font-weight: bold;
         color: #000;
         background-color: #fff;
@@ -684,7 +684,7 @@
 
     .bus-stop-description,
     body.dark-mode .bus-stop-description-title {
-        font-size: 30px !important;
+        font-size: 30px;
     }
 }
 
