--- a/css/style-tracker.css
+++ b/css/style-tracker.css
@@ -1,3 +1,13 @@
+body {
+    margin-bottom: 5em !important;
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+    #scrollUp {
+        bottom: 30px !important;
+    }
+}
+
 .commitments-table {
     width: 100%;
     max-width: 100vw;
@@ -17,8 +27,7 @@
 }
 
 table th {
-    background-color: #94d40b !important;
-    color: #000;
+    background-color: #4994a8 !important;
     font-size: 18px;
     margin: 5px;
 }
@@ -85,12 +94,6 @@ tr.section-header:hover .delete-btn {
     display: inline;
 }
 
-.cat-name {
-    background: #b2dfdb;
-    color: #222;
-    font-weight: bold;
-}
-
 .move-btn {
     background: none;
     border: none;
@@ -101,29 +104,61 @@ tr.section-header:hover .delete-btn {
     vertical-align: middle;
 }
 
-.category-row {
-    background: #b2dfdb;
-    font-weight: bold;
+
+.table-hover>tbody>tr>* {
+    transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.table-hover>tbody>tr:hover>* {
+    background-color: #c7e3fb !important;
+    transform: translateY(-2px);
 }
 
 .category-header-row td {
-    background: #b2dfdb;
+    background: #c4e5ee;
     font-weight: bold;
     font-size: 1.08em;
     border-bottom: 2px solid #80cbc4;
     padding-top: 1em;
     padding-bottom: 0.5em;
+    overflow: visible;
+}
+
+.category-header-row input.cat-name:hover {
+    background: #7fa7b3 !important;
+    color: #fff;
+    cursor: pointer;
 }
 
 .category-header-row input.cat-name {
-    background: transparent;
-    border: none;
+    background: #68a0af !important;
+    border: 1.5px solid #4994a8;
+    border-radius: 24px;
     font-weight: bold;
-    font-size: 1.08em;
+    font-size: 1.12em;
     width: 100%;
-    color: #222;
+    color: #fff;
     outline: none;
-    padding: 0.2em 0;
+    transition: border-color 0.2s, box-shadow 0.2s;
+    border: 1px solid #2b2b2b33;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.category-header-row input.cat-name:focus {
+    box-shadow: 0 0 0 2px #bbdefb;
+    background: #fff !important;
+    color: #000;
+}
+
+.commitments-table td:focus {
+    box-shadow: 0 0 0 2px #bbdefb;
+    background: #e3f0f3 !important;
+    color: #000;
+    border-bottom: 2px solid #68a0af;
+}
+
+.commitments-table td:focus-visible {
+    outline: none;
 }
 
 .commitments-container {
@@ -159,7 +194,7 @@ tr.section-header:hover .delete-btn {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #d3d3d3;
+    color: #000;
     appearance: none;
     background-color: #ffffff;
     background-clip: padding-box;
@@ -181,13 +216,22 @@ tr.section-header:hover .delete-btn {
 }
 
 .commitments-table th:nth-child(1),
+.commitments-table th:nth-child(2),
+.commitments-table th:nth-child(3),
+.commitments-table th:nth-child(4) {
+    color: #fff;
+}
+
+.commitments-table th:nth-child(1),
 .commitments-table td:nth-child(1) {
     width: 60px;
     min-width: 50px;
     max-width: 260px;
     text-align: left;
     padding-left: 1em;
-    padding-right: 0.2em;
+    padding-right: 1em;
+    overflow: visible;
+    position: relative;
 }
 
 .commitments-table th:nth-child(2),
@@ -196,8 +240,8 @@ tr.section-header:hover .delete-btn {
     min-width: 50px;
     max-width: 260px;
     text-align: center;
-    padding-left: 0.2em;
-    padding-right: 0.2em;
+    padding-left: 1em;
+    padding-right: 1em;
     font-weight: bolder;
 }
 
@@ -207,8 +251,8 @@ tr.section-header:hover .delete-btn {
     min-width: 50px;
     max-width: 70px;
     text-align: center;
-    padding-left: 0.2em;
-    padding-right: 0.2em;
+    padding-left: 1em;
+    padding-right: 1em;
 }
 
 .commitments-table th:nth-child(4),
@@ -217,8 +261,8 @@ tr.section-header:hover .delete-btn {
     min-width: 36px;
     max-width: 36px;
     text-align: center;
-    padding-left: 0.2em;
-    padding-right: 0.2em;
+    padding-left: 1em;
+    padding-right: 1em;
 }
 
 .commitments-table th:nth-child(5),
@@ -227,8 +271,12 @@ tr.section-header:hover .delete-btn {
     min-width: 50px;
     max-width: 70px;
     text-align: center;
-    padding-left: 0.2em;
-    padding-right: 0.2em;
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
+.category-header-row td:first-child input.cat-name {
+    padding-left: 18px;
 }
 
 .commitments-totals {
@@ -255,6 +303,13 @@ tr.section-header:hover .delete-btn {
 .negative-balance {
     color: #c62828 !important;
     font-weight: bold;
+}
+
+#addCategoryBtn {
+    border-radius: 24px;
+    padding: 0.4em 1em;
+    border: 1px solid #2b2b2b33;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 
@@ -303,11 +358,11 @@ tr.section-header:hover .delete-btn {
 /*  */
 @media (max-width: 767px) {
     table th {
-    background-color: #94d40b !important;
-    color: #000;
-    font-size: 15px;
-    margin: 5px;
-}
+        background-color: #94d40b !important;
+        color: #000;
+        font-size: 15px;
+        margin: 5px;
+    }
 }
 
 /* Extra small screens (phones) */
