--- a/css/style-tracker.css
+++ b/css/style-tracker.css
@@ -62,8 +62,44 @@ body.dark-mode table th {
 }
 
 input[type="checkbox"] {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 18px;
+    height: 18px;
     transform: scale(1.2);
-    accent-color: #7e57c2;
+    border-radius: 4px;
+    border: 2px solid #7fa7b3;
+    background-color: transparent;
+    display: inline-grid;
+    place-content: center;
+    cursor: pointer;
+}
+
+input[type="checkbox"]:checked {
+    background-color: #7fa7b3;
+}
+
+input[type="checkbox"]::before {
+    content: "";
+    width: 9px;
+    height: 5px;
+    border-left: 3px solid #fff;
+    border-bottom: 3px solid #fff;
+    transform: rotate(-45deg);
+    opacity: 0;
+}
+
+input[type="checkbox"]:checked::before {
+    opacity: 1;
+}
+
+input[type="checkbox"]:focus-visible {
+    outline: none;
+    box-shadow: 0 0 0 2px #bbdefb;
+}
+
+body.dark-mode input[type="checkbox"] {
+    border-color: #7fa7b3;
 }
 
 .delete-btn {
