--- a/buszy/css/style-buszy.css
+++ b/buszy/css/style-buszy.css
@@ -30,6 +30,19 @@
 
 /* Mobile-Tablet */
 @media (max-width: 994px) {
+    .container {
+        max-width: 100vw !important;
+    }
+
+    .container-xxl {
+        padding-right: 30px;
+        padding-left: 30px;
+    }
+
+    .page-title-wrapper>div>div:first-child {
+        margin-bottom: 0px !important;
+    }
+
     .navbar,
     body.dark-mode .navbar {
         display: none;
@@ -59,7 +72,8 @@
         /* min-width: 220px; */
         max-width: 90vw;
         z-index: 2000;
-        background: #fff;
+        background: rgba(253, 253, 253, 0.635);
+        backdrop-filter: blur(25px);
         margin: 0;
         border-radius: 16px;
         box-shadow: 0 8px 32px rgba(0, 0, 0, 0.18), 0 1.5px 8px rgba(0, 0, 0, 0.08);
@@ -91,8 +105,9 @@
     }
 
     .mobile-bottom-nav ul {
-        background: #fff;
-        border-radius: 32px;
+        background: rgba(253, 253, 253, 0.635);
+        backdrop-filter: blur(25px);
+        border-radius: 50px;
         box-shadow: 0 2px 16px rgba(0, 0, 0, 0.08);
         display: flex;
         margin: 12px 8px;
@@ -118,7 +133,7 @@
     }
 
     .mobile-bottom-nav li.active {
-        background: #F8C7E2;
+        background: linear-gradient(90deg, rgb(0, 112, 147) 0%, rgb(45, 147, 172) 100%);
     }
 
     .mobile-bottom-nav .icon {
@@ -128,22 +143,13 @@
         margin-bottom: 2px;
     }
 
-    .mobile-bottom-nav li.active .icon svg path,
-    .mobile-bottom-nav li.active .icon svg rect,
-    .mobile-bottom-nav li.active .icon svg circle {
-        fill: #A8005A;
-    }
-
-    .mobile-bottom-nav li .icon svg path,
-    .mobile-bottom-nav li .icon svg rect,
-    .mobile-bottom-nav li .icon svg circle {
-        fill: #888;
-        transition: fill 0.2s;
-    }
-
     .mobile-bottom-nav li.active .label {
-        color: #A8005A;
+        color: #fff;
         font-weight: bold;
+    }
+
+    .mobile-bottom-nav li.active .icon i {
+        color: #fff;
     }
 
     .mobile-bottom-nav .label {
