--- a/delays-tracker/css/style-tdt.css
+++ b/delays-tracker/css/style-tdt.css
@@ -83,6 +83,12 @@ body.dark-mode li.breadcrumb-item a {
     font-weight: bolder;
 }
 
+.fetch {
+    margin-top: 1em;
+    color: #4d4d4d;
+    text-align: left !important;
+}
+
 
 body.dark-mode .list-group-item {
     background-color: #2e2e2e;
