--- a/buszy/css/style-buszy.css
+++ b/buszy/css/style-buszy.css
@@ -151,7 +151,7 @@ body.dark-mode li.breadcrumb-item a {
     }
 
     body.dark-mode .breadcrumb.breadcrumb-fixed {
-        background: #06070ca1;
+        background: #1f243bc9;
         backdrop-filter: blur(25px);
         box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
         position: fixed;
@@ -213,7 +213,7 @@ body.dark-mode li.breadcrumb-item a {
     }
 
     body.dark-mode .mobile-bottom-nav ul {
-        background: #06070ca1;
+        background: #1f243bc9;
         backdrop-filter: blur(25px);
         box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
     }
@@ -855,7 +855,7 @@ body.dark-mode .arrival-now {
 }
 
 body.dark-mode .bus-stop {
-    background-color: #2e2e2e;
+    background-color: #1c1f2b;
     color: #fff !important;
     border: 1px solid #2b2b2b33;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
