--- a/buszy/css/style-buszy.css
+++ b/buszy/css/style-buszy.css
@@ -729,6 +729,7 @@ table th {
     border: 1px solid #cccccc;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
+    width:max-content !important;
 }
 
 .btn-busloc:disabled {
