--- a/css/style.css
+++ b/css/style.css
@@ -2170,7 +2170,7 @@ h2.page-title {
 
 .portfolio-filter .btn {
     padding: 10px 15px;
-    background: #de652e;
+    background: #7e899a;
     color: #fff;
     border-radius: 25px;
     cursor: pointer;
