--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -473,7 +473,7 @@ body.dark-mode #sort-options {
     padding-right: 30px;
     padding-left: 15px;
     color: #fff;
-    background-color: #2e2e2e;
+    background-color: #393e53;
     border: 1px solid #2b2b2b33;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
@@ -561,16 +561,15 @@ body.dark-mode .wbnrfz_eicw {
 
 
 body.dark-mode .form-control {
-    display: block;
+display: block;
     width: 100%;
     color: #fff;
     appearance: none;
-    background: #2e2e2e;
+    background: #1c1f2b;
     background-clip: padding-box;
     border-radius: 25px;
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-    border: 1px solid #2b2b2b33;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
+    border: 2px solid #393e53;
 }
 
 body.dark-mode .form-control::placeholder {
