--- a/css/style.css
+++ b/css/style.css
@@ -498,7 +498,7 @@ input:required {
     opacity: 0;
     pointer-events: none;
     transform: translateY(12px);
-    transition: opacity 0.3s cubic-bezier(.4,0,.2,1), transform 0.3s cubic-bezier(.4,0,.2,1);
+    transition: opacity 0.3s cubic-bezier(.4, 0, .2, 1), transform 0.3s cubic-bezier(.4, 0, .2, 1);
 }
 
 #scrollUp.btt-visible {
@@ -2563,9 +2563,9 @@ li.breadcrumb-item a:hover {
     padding-bottom: 3em;
 }
 
-  .video-row {
+.video-row {
     display: block;
-  }
+}
 
 /* ------------------------------------------ */
 
@@ -2691,7 +2691,7 @@ li.breadcrumb-item a:hover {
     border-radius: 25px;
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
     border: 1px solid #2b2b2b33;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
+    height: 40px;
 }
 
 #bus-stop-search {
