--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -354,7 +354,7 @@ body.dark-mode .block-27 ul li a {
 }
 
 body.dark-mode .ftco-section {
-    background-color: #18191a;
+    background-color: #121521;
     transition: all 0.5s ease;
 }
 
@@ -364,7 +364,7 @@ body.dark-mode .about-author {
 }
 
 body.dark-mode blockquote {
-    background-color: #3a3b3c;
+    background-color: #393e53;
     transition: all 0.5s ease;
     color: #fff;
 }
@@ -756,7 +756,7 @@ body.dark-mode .flickity-prev-next-button {
     cursor: pointer;
     transform: translateY(0%) !important;
     transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) !important;
-    background-color: #444444 !important;
+    background-color: #7e899a !important;
     border: 1px solid #2b2b2b33;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.233), 0 4px 12px rgba(0, 0, 0, 0.1);
 }
