--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -536,7 +536,7 @@ body.dark-mode .wbnrfz_details_body {
 }
 
 body.dark-mode .wbnrfz_details_body_tchp {
-    background: #18191a;
+    background: #121521;
     margin-top: -3.2em;
     padding-top: 0em;
     padding-bottom: 2em;
